# 2024-Tim-s-HW-Notes-Files

./: README.md
lab0/: meson.build
lab0/tests/: meson.build  runner.py
lab1part1/: meson.build  part1.c
lab1part1/tests/: meson.build  runner.py
lab1part2/: meson.build  part2.c
lab1part2/tests/: meson.build
lab1part3/: meson.build  part3.c
lab1part3/tests/: meson.build
lab2part1/: meson.build  part1.c
lab2part1/tests/: meson.build
lab2part2/: meson.build  part2.c
lab2part2/tests/: meson.build
lab2part3/: meson.build  part3.c
lab3part1/: meson.build  part1.c
lab3part1/tests/: meson.build  runner.py
lab3part2/: meson.build  part2.c
lab3part2/tests/: meson.build
lab3part3/: meson.build  part3.c
lab3part3/tests/: meson.build
lab4part1/: part1.c
lab5/: lab5.c  meson.build
lab5/tests/: meson.build
lab5/tests/private/inputs/: lab5-10  lab5-6  lab5-7  lab5-8  lab5-9
lab5/tests/private/outputs/: lab5-10  lab5-6  lab5-7  lab5-8  lab5-9
lab5/tests/public/inputs/: lab5-2  lab5-3  lab5-4  lab5-5
lab5/tests/public/outputs/: lab5-1  lab5-2  lab5-3  lab5-4  lab5-5
lab6/: lab6.c  meson.build
lab7/: lab7.c  meson.build
lab7/tests/: meson.build
lab7/tests/private/inputs/: lab7-10  lab7-7  lab7-8  lab7-9
lab7/tests/private/outputs/: lab7-10  lab7-7  lab7-8  lab7-9
lab7/tests/public/inputs/: lab7-1  lab7-2  lab7-3  lab7-4  lab7-5  lab7-6
lab7/tests/public/outputs/: lab7-1  lab7-2  lab7-3  lab7-4  lab7-5  lab7-6
lab8part1/: meson.build  part1.c
lab8part2/: meson.build  part2.c
lab9/: lab9.c  meson.build
(+77 files in other folders)
